force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <allowInChatter>false</allowInChatter>
    <description>Tracks sales targets for reps, products, and territories</description>
    <label>Sales Target</label>
    <nameField>
        <label>Sales Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>