force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <description>Sales representative for this target</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>