force-app/main/default/objects/Sales_Target__c/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <description>Descriptive name for the sales target</description>
    <label>Target Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>