force-app/main/default/objects/Sales_Target__c/fields/Target_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Target_Period_End__c</fullName>
    <description>End date of the sales target period</description>
    <label>Target Period End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>