force-app/main/default/objects/Sales_Target__c/fields/Target_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Target_Period_Start__c</fullName>
    <description>Start date of the sales target period</description>
    <label>Target Period Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>